copy the run steps from circle ci

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,4 +32,11 @@ jobs:
         id: publish-token
         uses: atlassian-labs/artifact-publish-token@v1.0.3
       - name: Publish artifact
-        run: mvn release:perform
+        run: export REPO=atlassianlabs/landkid
+        run: export TAG=`if [ "${GITHUB_REF##*/}" == "master" ]; then echo "latest"; else echo $GITHUB_REF ; fi`
+        run: docker login docker-public.packages.atlassian.com --username $ARTIFACTORY_USERNAME --password $ARTIFACTORY_API_KEY
+        run: docker build -f Dockerfile -t $REPO:$GITHUB_SHA .
+        run: docker tag $REPO:$GITHUB_SHA $REPO:$TAG
+        run: docker tag $REPO:$GITHUB_SHA $REPO:action-${{github.run_number}}
+        run: docker push $REPO:$TAG
+        run: docker push $REPO:action-${{github.run_number}}
