--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,11 +32,12 @@ jobs:
         id: publish-token
         uses: atlassian-labs/artifact-publish-token@v1.0.3
       - name: Publish artifact
-        run: export REPO=atlassianlabs/landkid
-        run: export TAG=`if [ "${GITHUB_REF##*/}" == "master" ]; then echo "latest"; else echo $GITHUB_REF ; fi`
-        run: docker login docker-public.packages.atlassian.com --username $ARTIFACTORY_USERNAME --password $ARTIFACTORY_API_KEY
-        run: docker build -f Dockerfile -t $REPO:$GITHUB_SHA .
-        run: docker tag $REPO:$GITHUB_SHA $REPO:$TAG
-        run: docker tag $REPO:$GITHUB_SHA $REPO:action-${{github.run_number}}
-        run: docker push $REPO:$TAG
-        run: docker push $REPO:action-${{github.run_number}}
+        run: |
+          export REPO=atlassianlabs/landkid
+          export TAG=`if [ "${GITHUB_REF##*/}" == "master" ]; then echo "latest"; else echo $GITHUB_REF ; fi`
+          docker login docker-public.packages.atlassian.com --username $ARTIFACTORY_USERNAME --password $ARTIFACTORY_API_KEY
+          docker build -f Dockerfile -t $REPO:$GITHUB_SHA .
+          docker tag $REPO:$GITHUB_SHA $REPO:$TAG
+          docker tag $REPO:$GITHUB_SHA $REPO:action-${{github.run_number}}
+          docker push $REPO:$TAG
+          docker push $REPO:action-${{github.run_number}}
