--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,12 +31,13 @@ jobs:
         uses: atlassian-labs/artifact-publish-token@v1.0.4
         with:
           output-modes: environment
-      - run: export HOST=docker-public.packages.atlassian.com/
-      - run: export REPO=atlassianlabs/landkid
-      - run: export TAG=`if [ "${GITHUB_REF##*/}" == "master" ]; then echo "latest"; else echo $GITHUB_REF ; fi`
-      - run: echo "${ARTIFACTORY_API_KEY}" | docker login docker-public.packages.atlassian.com -u "${ARTIFACTORY_USERNAME}" --password-stdin
-      - run: docker build -f Dockerfile -t $REPO:$GITHUB_SHA .
-      - run: docker tag $REPO:$GITHUB_SHA $HOST$REPO:$TAG
-      - run: docker tag $REPO:$GITHUB_SHA $HOST$REPO:action-${{github.run_number}}
-      - run: docker push $HOST$REPO:$TAG
-      - run: docker push $HOST$REPO:action-${{github.run_number}}
+      - name: Publish artifact
+        run: |
+          export REPO=atlassianlabs/landkid
+          export TAG=`if [ "${GITHUB_REF##*/}" == "master" ]; then echo "latest"; else echo $GITHUB_REF ; fi`
+          echo "${ARTIFACTORY_API_KEY}" | docker login docker-public.packages.atlassian.com -u "${ARTIFACTORY_USERNAME}" --password-stdin
+          docker build -f Dockerfile -t $REPO:$GITHUB_SHA .
+          docker tag $REPO:$GITHUB_SHA $REPO:$TAG
+          docker tag $REPO:$GITHUB_SHA $REPO:action-${{github.run_number}}
+          docker push $REPO:$TAG
+          docker push $REPO:action-${{github.run_number}}
