Fixing TypeScript issues after installing Storybook
- Storybook seemed to cause type issues due to webpack dependencies. I upgraded to Webpack 5 and loaders
- Bumped to React ^16.8.0
- Added style-loader and css-loader to webpack to bundle @atlaskit/css-reset

--- a/package.json
+++ b/package.json
@@ -55,17 +55,18 @@
     "@types/p-retry": "^2.0.0",
     "@types/passport": "^1.0.6",
     "@types/passport-oauth2": "^1.4.10",
-    "@types/react": "^16.7.5",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "@types/redis": "^2.8.28",
     "@types/redlock": "^3.0.2",
     "@types/umzug": "^2.2.2",
     "babel-loader": "^8.2.5",
-    "cache-loader": "^1.2.5",
+    "cache-loader": "^4.1.0",
     "concurrently": "^4.1.0",
+    "css-loader": "^6.7.1",
     "cypress": "^8.3.1",
     "faker": "^4.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "httplease-asap": "^0.3.2",
     "husky": "^0.14.3",
     "ioredis": "^4.28.2",
@@ -78,12 +79,13 @@
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
     "sqlite3": "^5.0.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "25.5.1",
-    "ts-loader": "^5.3.0",
+    "ts-loader": "^9.3.1",
     "ts-node": "^9.1.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
     "@atlaskit/button": "^16.3.1",
@@ -107,8 +109,8 @@
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "redis": "^3.1.2",
     "redlock": "^3.1.2",
     "reflect-metadata": "^0.1.12",
