--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "prettier": "^2.3.0",
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
-    "sqlite3": "^5.0.0",
+    "sqlite3": "^5.0.11",
     "ts-jest": "25.5.1",
     "ts-loader": "^5.3.0",
     "ts-node": "^9.1.1",
@@ -90,6 +90,7 @@
     "express-session": "^1.17.1",
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
+    "p-limit": "^4.0.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
