Webpack devServer fixes after Webpack 5 upgrade
Update configuration to match new options

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,11 +8,14 @@
       "es7"
     ],
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "noImplicitThis": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
 }
