--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "prettier": "^2.3.0",
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
-    "sqlite3": "^5.0.0",
+    "sqlite3": "^5.0.11",
     "style-loader": "^3.3.1",
     "ts-jest": "25.5.1",
     "ts-loader": "^9.3.1",
@@ -106,6 +106,7 @@
     "express-session": "^1.17.1",
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
+    "p-limit": "^3.1.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
