--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
     "p-limit": "^3.1.0",
+    "mime": "^3.0.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
