--- a/package.json
+++ b/package.json
@@ -114,6 +114,8 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-dom-confetti": "^0.2.0",
+    "react-intersection-observer": "^9.4.0",
+    "react-usestateref": "^1.0.8",
     "redis": "^3.1.2",
     "redlock": "^3.1.2",
     "reflect-metadata": "^0.1.12",
