--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "@atlaskit/button": "^15.0.0",
+    "@atlaskit/checkbox": "^12.3.19",
     "@atlaskit/css-reset": "^6.3.13",
     "@atlaskit/pagination": "^8.0.5",
     "@atlaskit/section-message": "^6.1.12",
@@ -106,8 +107,8 @@
     "express-session": "^1.17.1",
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
-    "p-limit": "^3.1.0",
     "mime": "^3.0.0",
+    "p-limit": "^3.1.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
