--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@storybook/addon-links": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
     "@types/body-parser": "^1.17.0",
     "@types/connect-redis": "0.0.16",
     "@types/express": "^4.16.0",
