--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "pretest:integration": "node tools/test-local.js",
     "posttest:integration": "node tools/test-local.js --revert",
     "test:integration": "cypress run --browser chrome --reporter junit",
