--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^15.0.2",
     "@types/p-retry": "^2.0.0",
     "@types/passport": "^1.0.6",
+    "@types/passport-http": "^0.3.9",
     "@types/passport-oauth2": "^1.4.10",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
@@ -112,6 +113,7 @@
     "mime": "^3.0.0",
     "p-limit": "^3.1.0",
     "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
     "react": "^16.8.0",
