--- a/package.json
+++ b/package.json
@@ -18,17 +18,13 @@
   "scripts": {
     "clean": "rimraf dist",
     "test:unit": "jest",
-    "pretest:integration": "node tools/test-local.js",
-    "posttest:integration": "node tools/test-local.js --revert",
-    "test:integration": "cypress run --browser chrome --reporter junit",
-    "test:integration:watch": "cypress open",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
     "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
     "start": "cross-env NODE_ENV=production node ./dist",
     "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --watch rules --delay 1\"",
-    "precommit": "node tools/test-local.js --revert && lint-staged",
+    "precommit": "lint-staged",
     "migrate": "ts-node src/db/MigrationService.ts",
     "tunnel": "./tools/tunnel.sh",
     "storybook": "start-storybook -p 6006",
@@ -56,6 +52,7 @@
     "@types/node": "^15.0.2",
     "@types/p-retry": "^2.0.0",
     "@types/passport": "^1.0.6",
+    "@types/passport-http": "^0.3.9",
     "@types/passport-oauth2": "^1.4.10",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
@@ -66,7 +63,6 @@
     "cache-loader": "^4.1.0",
     "concurrently": "^4.1.0",
     "css-loader": "^6.7.1",
-    "cypress": "^8.3.1",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "httplease-asap": "^0.3.2",
@@ -112,6 +108,7 @@
     "mime": "^3.0.0",
     "p-limit": "^3.1.0",
     "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
     "react": "^16.8.0",
