--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "rootDir": "src",
     "outDir": "dist",
   },
+  "include": [
+    "./src",
+    "./typings"
+  ],
   "exclude": [
     "node_modules",
     "tests",
