--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
