--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@atlaskit/pagination": "^8.0.5",
     "@atlaskit/section-message": "^6.1.12",
     "@atlaskit/spinner": "^15.1.11",
+    "@atlaskit/tooltip": "^17.6.5",
     "@types/micromatch": "^4.0.1",
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.21.4",
