--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "micromatch": "^4.0.2",
     "mime": "^3.0.0",
     "p-limit": "^3.1.0",
+    "p-retry": "^4",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-oauth2": "^1.5.0",
