--- a/package.json
+++ b/package.json
@@ -106,9 +106,11 @@
     "express": "^4.16.2",
     "express-session": "^1.17.1",
     "express-winston": "^3.0.1",
+    "mem": "^8",
     "micromatch": "^4.0.2",
     "mime": "^3.0.0",
     "p-limit": "^3.1.0",
+    "p-retry": "^4",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-oauth2": "^1.5.0",
